--- a/pg/index.html
+++ b/pg/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Download de Vídeo</h1>
-  <form action="http://localhost:3000" method="GET">
+  <form action="https://tellesjr-video.onrender.com" method="GET">
     <label for="url">URL do vídeo:</label>
     <input type="text" id="url" name="url" placeholder="Insira a URL do vídeo" required>
     <button type="submit">Baixar</button>
